k8s/apps/flask-ml/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-ml
  namespace: flask-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-ml
  template:
    metadata:
      labels:
        app: flask-ml
    spec:
      containers:
        - name: flask-ml
          image: nginx
          ports:
            - containerPort: 80
