k8s/apps/flask-ml/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-ml
  namespace: flask-ml
spec:
  selector:
    app: flask-ml
  ports:
    - port: 80
      targetPort: 80
