k8s/apps/flask-ml/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flask-ml
  namespace: flask-ml

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`flask.kuyen.online`)
      kind: Rule
      services:
        - name: flask-ml
          port: 80
